--- a/Pandas/PandasCheetSheet.ipynb
+++ b/Pandas/PandasCheetSheet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -15,7 +15,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -947,7 +947,7 @@
     }
    ],
    "source": [
-    "counties.iloc[:3, :2] #iloc uses implicit indexing (iloc for positional indexing)\n"
+    "counties.iloc[:3, :2] #iloc uses implicit indexing (loc for positional indexing)\n"
    ]
   },
   {
@@ -1506,29 +1506,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0    NaN\n",
-       "1    5.0\n",
-       "2    9.0\n",
-       "3    NaN\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    NaN\n",
+      "1    5.0\n",
+      "2    9.0\n",
+      "3    NaN\n",
+      "dtype: float64\n"
+     ]
     }
    ],
    "source": [
     "# More example:\n",
     "A = pd.Series([2, 4, 6], index=[0, 1, 2])\n",
     "B = pd.Series([1, 3, 5], index=[1, 2, 3])\n",
-    "A + B"
+    "print(A + B)"
    ]
   },
   {
@@ -1543,7 +1540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1556,7 +1553,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8131,7 +8128,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -8145,7 +8142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
